--- a/Atalhos.html
+++ b/Atalhos.html
@@ -50,6 +50,10 @@
     <h1>Atalhos PC</h1>
     CTRL + F5 = Limpa os dados salvos do navegador<br>
     CTRL + < = Voltar a página anterior<br>
+    CTRL + A = Selecionar tudo <br>
+    CTRL + C = Copiar <br>
+    CTRL + V = Colar  <br>
+    CTRL + X = Recortar
     
     <h1>Atalhos Visual Studio Code</h1>
     
