--- a/Entidades.html
+++ b/Entidades.html
@@ -116,36 +116,36 @@
     "&Colon;": { "codepoints": [8759], "characters": "\u2237" },<br>
     "&Colone;": { "codepoints": [10868], "characters": "\u2A74" },<br>
     "&Congruent;": { "codepoints": [8801], "characters": "\u2261" },<br>
-    "&Conint;": { "codepoints": [8751], "characters": "\u222F" },
-    "&ContourIntegral;": { "codepoints": [8750], "characters": "\u222E" },
-    "&Copf;": { "codepoints": [8450], "characters": "\u2102" },
-    "&Coproduct;": { "codepoints": [8720], "characters": "\u2210" },
-    "&CounterClockwiseContourIntegral;": { "codepoints": [8755], "characters": "\u2233" },
-    "&Cross;": { "codepoints": [10799], "characters": "\u2A2F" },
-    "&Cscr;": { "codepoints": [119966], "characters": "\uD835\uDC9E" },
-    "&Cup;": { "codepoints": [8915], "characters": "\u22D3" },
-    "&CupCap;": { "codepoints": [8781], "characters": "\u224D" },
-    "&DD;": { "codepoints": [8517], "characters": "\u2145" },
-    "&DDotrahd;": { "codepoints": [10513], "characters": "\u2911" },
-    "&DJcy;": { "codepoints": [1026], "characters": "\u0402" },
-    "&DScy;": { "codepoints": [1029], "characters": "\u0405" },
-    "&DZcy;": { "codepoints": [1039], "characters": "\u040F" },
-    "&Dagger;": { "codepoints": [8225], "characters": "\u2021" },
-    "&Darr;": { "codepoints": [8609], "characters": "\u21A1" },
-    "&Dashv;": { "codepoints": [10980], "characters": "\u2AE4" },
-    "&Dcaron;": { "codepoints": [270], "characters": "\u010E" },
-    "&Dcy;": { "codepoints": [1044], "characters": "\u0414" },
-    "&Del;": { "codepoints": [8711], "characters": "\u2207" },
-    "&Delta;": { "codepoints": [916], "characters": "\u0394" },
-    "&Dfr;": { "codepoints": [120071], "characters": "\uD835\uDD07" },
-    "&DiacriticalAcute;": { "codepoints": [180], "characters": "\u00B4" },
-    "&DiacriticalDot;": { "codepoints": [729], "characters": "\u02D9" },
-    "&DiacriticalDoubleAcute;": { "codepoints": [733], "characters": "\u02DD" },
-    "&DiacriticalGrave;": { "codepoints": [96], "characters": "\u0060" },
-    "&DiacriticalTilde;": { "codepoints": [732], "characters": "\u02DC" },
-    "&Diamond;": { "codepoints": [8900], "characters": "\u22C4" },
-    "&DifferentialD;": { "codepoints": [8518], "characters": "\u2146" },
-    "&Dopf;": { "codepoints": [120123], "characters": "\uD835\uDD3B" },
+    "&Conint;": { "codepoints": [8751], "characters": "\u222F" },<br>
+    "&ContourIntegral;": { "codepoints": [8750], "characters": "\u222E" },<br>
+    "&Copf;": { "codepoints": [8450], "characters": "\u2102" },<br>
+    "&Coproduct;": { "codepoints": [8720], "characters": "\u2210" },<br>
+    "&CounterClockwiseContourIntegral;": { "codepoints": [8755], "characters": "\u2233" },<br>
+    "&Cross;": { "codepoints": [10799], "characters": "\u2A2F" },<br>
+    "&Cscr;": { "codepoints": [119966], "characters": "\uD835\uDC9E" },<br>
+    "&Cup;": { "codepoints": [8915], "characters": "\u22D3" },<br>
+    "&CupCap;": { "codepoints": [8781], "characters": "\u224D" },<br>
+    "&DD;": { "codepoints": [8517], "characters": "\u2145" },<br>
+    "&DDotrahd;": { "codepoints": [10513], "characters": "\u2911" },<br>
+    "&DJcy;": { "codepoints": [1026], "characters": "\u0402" },<br>
+    "&DScy;": { "codepoints": [1029], "characters": "\u0405" },<br>
+    "&DZcy;": { "codepoints": [1039], "characters": "\u040F" },<br>
+    "&Dagger;": { "codepoints": [8225], "characters": "\u2021" },<br>
+    "&Darr;": { "codepoints": [8609], "characters": "\u21A1" },<br>
+    "&Dashv;": { "codepoints": [10980], "characters": "\u2AE4" },<br>
+    "&Dcaron;": { "codepoints": [270], "characters": "\u010E" },<br>
+    "&Dcy;": { "codepoints": [1044], "characters": "\u0414" },<br>
+    "&Del;": { "codepoints": [8711], "characters": "\u2207" },<br>
+    "&Delta;": { "codepoints": [916], "characters": "\u0394" },<br>
+    "&Dfr;": { "codepoints": [120071], "characters": "\uD835\uDD07" },<br>
+    "&DiacriticalAcute;": { "codepoints": [180], "characters": "\u00B4" },<br>
+    "&DiacriticalDot;": { "codepoints": [729], "characters": "\u02D9" },<br>
+    "&DiacriticalDoubleAcute;": { "codepoints": [733], "characters": "\u02DD" },<br>
+    "&DiacriticalGrave;": { "codepoints": [96], "characters": "\u0060" },<br>
+    "&DiacriticalTilde;": { "codepoints": [732], "characters": "\u02DC" },<br>
+    "&Diamond;": { "codepoints": [8900], "characters": "\u22C4" },<br>
+    "&DifferentialD;": { "codepoints": [8518], "characters": "\u2146" },<br>
+    "&Dopf;": { "codepoints": [120123], "characters": "\uD835\uDD3B" },<br>
     "&Dot;": { "codepoints": [168], "characters": "\u00A8" },
     "&DotDot;": { "codepoints": [8412], "characters": "\u20DC" },
     "&DotEqual;": { "codepoints": [8784], "characters": "\u2250" },
