--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,19 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>20/03 Quarta-Feira 2024 </strong> 4.0<br>
+    Problemas surgindo e eu não sei como resolver, eis alguns deles : <br>
+    1- Jogo de Perguntas não está funcionando quando eu abro o servidor, somente funfa quando eu abro pelo Live Server ( não sei porque ) <br>
+    2- Idem 1 só que com o JogoPerguntas2 <br>
+    3- Está / Estava tendo um erro no JogoCobrinhax2, porém eu testei no pc e está funcionando normalmente, o jogo não é pra celular !!! Eu errei em algumas páginas <br>
+    Achei a solução do problema acima ! Eu havia colocado JogoCobrinhaCell, por isso acontecia o erro. <br>
+    Editei Algoritmo, Atalhos, Entidades,  <br>
+    Live Server travando muito, estarei usando a página normal pelo F5 <br>
+    Vi que algumas páginas não tem os 30 links da página inicial, verifiquei algumas e adicionei mais <br>
+    Criei a página Japonês, pois como estou estudando muito, irei por minhas anotações lá <br>
+    Bom galera atualização saiu no dia errado, pois ontem meu anti vírus deletou o exe do github, fui no site baixar e estava detectando vírus também.
+    <br><br>
+
     <strong>18/03 Segunta-feira 2024</strong> 3.9<br>
     Depois de 1 ano e 2 dias sem postar, eis que eu surjo do nada <br>
     Estarei dando um tempo do meu dia pra atualizar o blog, hoje só irei testar algumas coisas, futuramente irei testar
