--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -26,24 +26,30 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+		<li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+		<li><a href="Entidades.html" rel="next">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
+		<li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+		<li><a href="JogoPerguntas2.html" rel="next">JogoPerguntas2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="Passos.html">Passos</a></li>
+		<li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+		<li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
@@ -100,7 +106,7 @@
 
 	<p>P = Impressão</p>
 
-	S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado,<br> o VisuAlg pede seu
+	<p>S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado,<br> o VisuAlg pede seu
 	nome e localização.
 	Imprimir: Imprime imediatamente na impressora padrão o<br> texto presente no editor. Para configurar a impressão, use o
 	comando Imprimir do menu Arquivo<br> (acessível também pelo atalho Ctrl-P)</p>
@@ -113,66 +119,64 @@
 
 	Z = Desfaz último comando efetuado.</p>
 
-	Abrir (Ctrl-A): </p>
-	Novo (Ctrl-N): </p>
-	Salvar (Ctrl-S): .</p>
-	Cortar (Ctrl-X):</p>
-	Copiar (Ctrl-C): </p>
-	Colar (Ctrl-V): </p>
-	Desfazer (Ctrl-Z): </p>
-	Localizar (Ctrl-L): </p>
-	Substituir (Ctrl-U): </p>
-	Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.</p>
+	Abrir (Ctrl-A):<br>
+	Novo (Ctrl-N): <br>
+	Salvar (Ctrl-S): .<br>
+	Cortar (Ctrl-X):<br>
+	Copiar (Ctrl-C): <br>
+	Colar (Ctrl-V): <br>
+	Desfazer (Ctrl-Z): <br>
+	Localizar (Ctrl-L): <br>
+	Substituir (Ctrl-U): <br>
+	Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.<br><br>
 
 	1-Dicas :</p>
-
-	Caso esteja em branco : ! + CNTRL Espaço</p>
+	Caso esteja em branco : ! + CNTRL Espaço<br>
 	Isso faz com que seja preenchido o Visualg</p>
 
-	2-Comentários :</p>
+	2-Comentários :<br>
 	// Isso é um comentário </p>
 
-	3-Variáveis :</p>
-
+	3-Variáveis :<br>
 	var </p>
 	indentificador : tipo</p>
 	Ex: N1, N2, N3: Inteiro</p>
 
-	Variáveis são espaços na memória que vão guardar valores
-	Exemplo : msg: Caractere</p>
-	Se eu der o comando </p>
-	Escreval(msg)</p>
+	Variáveis são espaços na memória que vão guardar valores<br>
+	Exemplo : msg: Caractere<br>
+	Se eu der o comando <br>
+	Escreval(msg)<br>
 	Vai escrever o conteúdo da variável msg que é msg</p>
 
 	4-Identificadores :</p>
 
-	1-Deve começar com uma letra</p>
-	2-Os próximos caracteres podem ser letras ou números</p>
-	3-Não se pode utilizar nenhum símbolo, excete _ ( underline )</p>
-	4-Não pode conter espaços em branco</p>
-	5-Não pode conter letras com acentos</p>
+	1-Deve começar com uma letra<br>
+	2-Os próximos caracteres podem ser letras ou números<br>
+	3-Não se pode utilizar nenhum símbolo, excete _ ( underline )<br>
+	4-Não pode conter espaços em branco<br>
+	5-Não pode conter letras com acentos<br>
 	6-Não pode ser uma palavra reservada</p>
 
 	5-Tipos > Primitivos:</p>
 
-	OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )</p>
+	OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )<br>
 	OBS 2 : Dentro de "aspas" pode utilizar tudo</p>
 
-	-Inteiro : Ex -3,1,0,</p>
-	-Real : Ex 0.5, 5.0, -77.4, 3.1415</p>
-	-Caractere : Ex "Gustavo" "Algoritmo" "123"</p>
-	-Logico : Ex verdadeiro e falso</p>
-	-Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var</p>
+	-Inteiro : Ex -3,1,0,<br>
+	-Real : Ex 0.5, 5.0, -77.4, 3.1415<br>
+	-Caractere : Ex "Gustavo" "Algoritmo" "123"<br>
+	-Logico : Ex verdadeiro e falso<br>
+	-Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var<br>
 
 	6-Comandos de Saída : Ficam na área inicio</p>
 
-	1-Escreva ("Mensagem qualquer")</p>
-	Vai escrever Mensagem qualquer</p>
-	2-Escreval ("Mensagem qualquer")</p>
-	Vai escrever Mensagem qualquer e saltar pra linha de baixo
-	3-Leia(variável)</p>
-	Vai guardar na memória a variável</p>
-	4-Variável <- Operação</p>
+	1-Escreva ("Mensagem qualquer")<br>
+	Vai escrever Mensagem qualquer<br>
+	2-Escreval ("Mensagem qualquer")<br>
+	Vai escrever Mensagem qualquer e saltar pra linha de baixo<br>
+	3-Leia(variável)<br>
+	Vai guardar na memória a variável<br>
+	4-Variável <- Operação<br>
 	Ex: S <- n1 + n2</p>
 
 	7-Operadores Aritméticos : 7</p>
