--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Extensoes.html">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Japonês.html" rel="next">Japonês</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
