--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +7,9 @@
 	<title>Algoritmo</title>
 	<link rel="stylesheet" href="estilo01.css">
 	<link rel="shortcut icon" href="favicon.ico">
+	<style>
+		body { background-color: #aaaaaa; }
+	</style>
 	<script>
 		var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -17,7 +19,6 @@
         document.write("Olá Visitante, hoje é dia " + dataFormatada + " " + d.toLocaleDateString('pt-BR', {weekday: 'long'}));
 	</script>
 </head>
-
 <body>
 	<ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
@@ -32,6 +33,7 @@
 		<li><a href="Entidades.html" rel="next">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
 		<li><a href="Extensoes.html" rel="next">Extensões</a></li>
+		<li><a href="Japones.html" rel="next">Japonês</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
@@ -54,11 +56,10 @@
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
-
 	<div id="interface">
 	<h1>Algoritmo</h1>
-	<h2>Revisão Lógica de Programação Algoritmo</h2>
-	<h3>!!! Usando Visualg !!!</h3>
+	Revisão Lógica de Programação Algoritmo <br>
+	!!! Usando <strong>Visualg</strong> !!!
 
 	<p>algoritmo "Nome do Algoritmo"</p>
 	<p>var</p>
@@ -345,6 +346,6 @@
 		S <- S + N</p>
 		cont <- cont + 1</p>
 	FimEnquanto</p>
-</div>
+	</div>
 </body>
 </html>
