--- a/Canvas.html
+++ b/Canvas.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="canvas.css">
+    <link rel="stylesheet" href="estilo01.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <style>
+		body { background-color: #cccccc; }
+	</style>
     <script>
         var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -26,11 +29,14 @@
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Entidades.html" rel="next">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
+        <li><a href="Extensões" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntasx2.html" rel="next">JogoPerguntasx2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
@@ -42,6 +48,7 @@
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
