--- a/Historico.html
+++ b/Historico.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
-    <link rel="stylesheet" href="Historico.css">
+    <link rel="stylesheet" href="estilo01.css">
     <link rel="shortcut icon" href="favicon.ico">
+    <style>
+        body { background-color: #646446;}
+    </style>
     <script>
         var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -25,24 +28,31 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+		<li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+		<li><a href="Entidades.html" rel="next">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
+		<li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Japonês.html">Japonês</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+		<li><a href="JogoPerguntas2.html" rel="next">JogoPerguntas2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="Passos.html">Passos</a></li>
+		<li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+		<li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
@@ -50,7 +60,17 @@
 
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
-    <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+    <strong>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</strong><br><br>
+
+    <strong>23/03 Sábado 2024</strong>4.1<br>
+    Automatizei o projeto do site colocando 1 css pra quase todas páginas de estudo. <br>
+    Basicamente quase todas, exceto Jogo Cobrinha, Jogo Perguntas e ProjetoGoogleGlass <br>
+    Página Code foi criada mas nem eu sei porque kkkk Na verdade na época eu pensei em algo, mas hoje não lembro o que é mais <br>
+    Coloquei conteúdo na página de <strong>Japonês</strong> <br>
+    Finalmente vou abandonar o comando &lt;br&gt; ( usado para pular linha ), agora irei usar o line-height dentro css de &lt;p&gt; pra aproximar a linha de baixo com a de cima <br>
+    Criei a página EntidadesHTML pois precisei por uma entidade no html e não consegui, pois a página Entidades atual é relacionada a JS ( JavaScript ), em breve ela será alterada para EntidadesJS. Assim que eu criar, irei alterar tudo <br>
+    Criei também a página Termos pois irei por alguns termos de programação, exemplo : Comando, Entidade, Função, Objeto, etc
+    <br><br>
 
     <strong>20/03 Quarta-Feira 2024 </strong> 4.0<br>
     Problemas surgindo e eu não sei como resolver, eis alguns deles : <br>
@@ -78,7 +98,7 @@
     <strong>13/03 Segunda-Feira</strong> 3.7 <br>
     Atualmente só estou adicionando mais palavras no JogoPerguntas2 <br>
     Hoje coloquei idioma japonês <br>
-    <br><br>
+    <br>
 
     <strong>11/03 Sábado</strong> 3.6 <br>
     Adicionei Jogo de Perguntas 2 com 12 perguntas ( na verdade tem mais, porém depois repete) <br>
@@ -90,7 +110,7 @@
     Desculpe ficar muito tempo ofline, eu estava tentando me achar. <br>
     Explicando melhor : Eu estava com medo de terminar o curso e ficar estagnada, pois todo curso tem isso, ele pode te ensinar TUDO, mas você que deve continuar <br>
     Enfim, voltei adicionando mais dicas <br>
-    O jogo Perguntas 2 não está funcionando <br>
+    O jogo Perguntas 2 não está funcionando
     <br><br>
 
     <strong>21/02 Terça-Feira </strong> 3.4 <br>
@@ -128,7 +148,7 @@
     <strong>14/02 Terça-Feira</strong> 2.9 <br>
     Bom, hoje foi o dia do overflow, sai colocando em TODAS páginas do site, combinado com width e height ele fica muito bom, usem !!! <br>
     Atualizei a Página Principal, PáginaHTML, TagsCSS, TagsJavaScript <br>
-    Hoje foi o dia do JavaScript, perdi muito tempo ativando a função e chamando ela <br>
+    Hoje foi o dia do JavaScript, perdi muito tempo ativando a função e chamando ela
     <br><br>
 
     <strong>13/02 Segunda-Feira</strong> 2.8 <br>
