--- a/Livros.html
+++ b/Livros.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livros</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="livros.css">
+    <link rel="stylesheet" href="estilo01.css">
+    <style>
+        body { background-color: #abcdef;}
+    </style>
     <script>
         var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -22,31 +25,38 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+        <li><a href="Code.html">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Entidades.html">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
+        <li><a href="Extensoes.html">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Japonês.html" rel="next">Japonês</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2.html">JogoPerguntas2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Projetos.html">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJava.html">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
     <div id="interface">
     <h1>Livros</h1>
-    <p><strong>Indicações ou futuros livros</strong> que irei ler <br><br>
+    <strong>Indicações ou futuros livros</strong> que irei ler <br><br>
     -14 Hábitos de Desenvolvedores = Zeno Rocha<br>
     -Algoritmos: Teoria e Prática = Thomas Cormen<br>
     -Apostila HMTL = Roberhta Pereira (OK)<br>
