--- a/Atalhos.html
+++ b/Atalhos.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atalhos</title>
-    <link rel="stylesheet" href="Atalhos.css">
+    <link rel="stylesheet" href="estilo01.css">
     <link rel="shortcut icon" href="favicon.ico">
+    <style>
+		body { background-color: #bbbbbb; }
+	</style>
     <script>
         var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -24,24 +27,30 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+        <li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
-        <li><a href="Explicando.html">Explicando</a></li>
+        <li><a href="Entidades" rel="next">Entidades</a></li>
+        <li><a href="Explicando.html" rel="next">Explicando</a></li>
+        <li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2" rel="next">JogoPerguntas2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
@@ -107,6 +116,6 @@
 
     <p><strong>Tab</strong> <br>
     Seleciona o texto e aperte Tab pra ele ir pra direita</p>
-     </div>
+    </div>
 </body>
 </html>
