--- a/Eu.html
+++ b/Eu.html
@@ -4,24 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjetoAlfa</title>
-    <link rel="stylesheet" href="estilo01.css">
-    <link rel="shortcut icon" href="favicon.ico">
-    <script>
-        var d = new Date();
-        var dia = d.getDate().toString().padStart(2, '0');
-        var mes = (d.getMonth() + 1).toString().padStart(2, '0');
-        var ano = d.getFullYear();
-        var dataFormatada = dia + "/" + mes + "/" + ano;
-        document.write("Olá Visitante, hoje é dia " + dataFormatada + " " + d.toLocaleDateString('pt-BR', {weekday: 'long'}));
-    </script>
+    <title>Document</title>
 </head>
-
 <body>
-    <ul>
-		<li><a href="index.html" rel="prev">Voltar</a></li>
-	</ul>
-	<ol>
+    <ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
@@ -62,85 +48,5 @@
         </ul>
 
     </div>
-    
-    <div id="interface">
-    <h1>Alfabeto</h1>
-    <ol>
-    <!--ol = Lista ordenada : 1,2,3,etc-->
-    <li>Aーあ</li>
-    <li>Bー</li>
-    <li>Cー</li>
-    <li>Dー</li>
-    <li>Eーえ</li>
-    <li>Fー</li>
-    <li></li>
-    <li>Gー</li>
-    <li>Hー</li>
-    <li>Ha</li>
-    <li>He</li>
-    <li>Hi</li>
-    <li>Ho</li>
-    <li>Hu</li>
-    <li>Iーい</li>
-    <li>Jー</li>
-    <li>Kー</li>
-    <li>Ka</li>
-    <li>Ke</li>
-    <li>Ki</li>
-    <li>Ko</li>
-    <li>Ku</li>
-    <li>Lー</li>
-    <li>Mー</li>
-    <li>Ma</li>
-    <li>Me</li>
-    <li>Mi</li>
-    <li>Mo</li>
-    <li>Mu</li>
-    <li>Nーん</li>
-    <li>Na</li>
-    <li>Ne</li>
-    <li>Ni</li>
-    <li>No</li>
-    <li>Nu</li>
-    <li>Oーお</li>
-    <li>Pー</li>
-    <li>Qー</li>
-    <li>Rー</li>
-    <li>Ra</li>
-    <li>Re</li>
-    <li>Ri</li>
-    <li>Ro</li>
-    <li>Ru</li>
-    <li>Sー</li>
-    <li>Sa</li>
-    <li>Se</li>
-    <li>Si</li>
-    <li>So</li>
-    <li>Su</li>
-    <li>Tー</li>
-    <li>Ta</li>
-    <li>Te</li>
-    <li>Ti</li>
-    <li>To</li>
-    <li>Tu</li>
-    <li>Uーう</li>
-    <li>Vー</li>
-    <li>Wー</li>
-    <li>Wa</li>
-    <li>We</li>
-    <li>Wi</li>
-    <li>Wo</li>
-    <li>Wu</li>
-    <li>Xー</li>
-    <li>Yー</li>
-    <li>Ya</li>
-    <li>Ye</li>
-    <li>Yi</li>
-    <li>Yo</li>
-    <li>Yu</li>
-    <li>Zー</li>
-    <li></li>
-    </ol>
-</div>
 </body>
 </html>
