--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html" rel="next">Dicas</a></li>
         <li><a href="Entidades.html" rel="next">Entidades</a></li>
-        <li><a href="EntidadesHTML.html" rel="next">EntidadesHTML/a></li>
+        <li><a href="EntidadesHTML.html" rel="next">EntidadesHTML<a></li>
         <li><a href="Explicando.html" rel="next">Explicando</a></li>
         <li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
@@ -74,7 +74,12 @@
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div class="coluna">
+        <ul>
+            <li><a href="Eu.html">Quem sou eu</a></li>
+        </ul>
 
+    </div>
     <div id="interface">
     <h1>Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
