--- a/Atalhos.html
+++ b/Atalhos.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="favicon.ico">
     <style>
 		body { background-color: #bbbbbb; }
+        .coluna {
+            position: relative;
+            left: 670px;
+            top: -600px;
+        }
 	</style>
     <script>
         var d = new Date();
@@ -29,21 +34,23 @@
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
-        <li><a href="Dicas.html">Dicas</a></li>
-        <li><a href="Entidades" rel="next">Entidades</a></li>
+        <li><a href="Dicas.html" rel="next">Dicas</a></li>
+        <li><a href="Entidades.html" rel="next">Entidades</a></li>
+        <li><a href="EntidadesHTML.html" rel="next">EntidadesHTML<a></li>
         <li><a href="Explicando.html" rel="next">Explicando</a></li>
         <li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
-        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
-        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
-        <li><a href="JogoPerguntas2" rel="next">JogoPerguntas2</a></li>
-        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
-        <li><a href="Livros.html">Livros</a></li>
-        <li><a href="MySQL.html">MySQL</a></li>
+        <li><a href="Japonês.html" rel="next">Japonês</a></li>
+        <li><a href="JogoCobrinha.html" rel="next">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhax2.html" rel="next">JogoCobrinhax2</a></li>
+        <li><a href="JogoPerguntas.html" rel="next">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2.html" rel="next">JogoPerguntas2</a></li>
+        <li><a href="PerguntasRespostas.html" rel="next">PerguntasRespostas</a></li>
+        <li><a href="Livros.html" rel="next">Livros</a></li>
+        <li><a href="MySQL.html" rel="next">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
-        <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Passos.html" rel="next">Passos</a></li>
         <li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
@@ -52,9 +59,15 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
+        <li><a href="Termos.html" rel="next">Termos</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div class="coluna">
+        <ul>
+            <li><a href="Eu.html">Quem sou eu</a></li>
+        </ul>
+    </div>
     <div id ="interface">
     <h1>Atalhos PC</h1>
     CTRL + F5 = Limpa os dados salvos do navegador<br>
