--- a/Canvas.html
+++ b/Canvas.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="favicon.ico">
     <style>
 		body { background-color: #cccccc; }
+        .coluna {
+            position: relative;
+            left: 670px;
+            top: -600px;
+        }
 	</style>
     <script>
         var d = new Date();
@@ -27,22 +32,26 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+        <li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
-        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Dicas.html" rel="next">Dicas</a></li>
         <li><a href="Entidades.html" rel="next">Entidades</a></li>
-        <li><a href="Explicando.html">Explicando</a></li>
-        <li><a href="Extensões" rel="next">Extensões</a></li>
+        <li><a href="EntidadesHTML.html" rel="next">EntidadesHTML<a></li>
+        <li><a href="Explicando.html" rel="next">Explicando</a></li>
+        <li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
-        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
-        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
-        <li><a href="JogoPerguntasx2.html" rel="next">JogoPerguntasx2</a></li>
-        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
-        <li><a href="Livros.html">Livros</a></li>
-        <li><a href="MySQL.html">MySQL</a></li>
+        <li><a href="Japonês.html" rel="next">Japonês</a></li>
+        <li><a href="JogoCobrinha.html" rel="next">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhax2.html" rel="next">JogoCobrinhax2</a></li>
+        <li><a href="JogoPerguntas.html" rel="next">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2.html" rel="next">JogoPerguntas2</a></li>
+        <li><a href="PerguntasRespostas.html" rel="next">PerguntasRespostas</a></li>
+        <li><a href="Livros.html" rel="next">Livros</a></li>
+        <li><a href="MySQL.html" rel="next">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
-        <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Passos.html" rel="next">Passos</a></li>
+        <li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
@@ -50,37 +59,43 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
+        <li><a href="Termos.html" rel="next">Termos</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div class="coluna">
+        <ul>
+            <li><a href="Eu.html">Quem sou eu</a></li>
+        </ul>
+
+    </div>
     <div id="interface">
         <h1>Canvas</h1>
         <h4>Pra colocar precisa chamar a Biblioteca p5.js no html depois da tag title e criar função no CSS: </h4>
         <code>
-            < script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js">< /script>
+            &lt script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js" &gt 
         </code>
         <h4>Comando pra chamar no CSS :</h4>
-        <p>function setup() {<br>
-            createCanvas(400, 400);<br>
+        <p>function setup() {
+            createCanvas(400, 400);
         }</p>
-        </>
-        <p> O <strong>canvas</strong> é uma tela virtual onde desenhamos e criamos elementos gráficos com código. É amplamente utilizado em jogos, animações e outros tipos de aplicativos que requerem desenho interativo em tempo real. Ele pode ser criado e manipulado através de APIs de desenho 2D ou 3D, como a API do HTML5 Canvas ou a biblioteca gráfica p5.js. A principal vantagem do canvas é a sua capacidade de criar e manipular elementos gráficos de maneira dinâmica e eficiente, tornando-o uma ferramenta versátil para muitos tipos de projetos interativos.
-        Referência https://p5js.org/reference/</p>
+        &lt/>
+        O <strong>canvas</strong> é uma tela virtual onde desenhamos e criamos elementos gráficos com código. É amplamente utilizado em jogos, animações e outros tipos de aplicativos que requerem desenho interativo em tempo real. Ele pode ser criado e manipulado através de APIs de desenho 2D ou 3D, como a API do HTML5 Canvas ou a biblioteca gráfica p5.js. A principal vantagem do canvas é a sua capacidade de criar e manipular elementos gráficos de maneira dinâmica e eficiente, tornando-o uma ferramenta versátil para muitos tipos de projetos interativos.
+        Referência https://p5js.org/reference/
         <h3>Após chamar basta continuar no CSS</h3>
-        <p><strong>
+        <strong>
             function draw() {<br>
                 background(255, 255, 255);<br>
                 fill(255, 255, 255);<br>
                 rect(100, 50, 300, 300);<br>
                 fill(255, 0, 0);<br>
                 ellipse(250, 200, 100, 100);<br>
-        }</strong></p>
-        <p>
-        A ordem dos desenhos importa<br>
+        }</strong>
+        <p>A ordem dos desenhos importa</p>
         Ou seja, para desenhar algo que vai encima de outro, antes precisa colocar o objeto de baixo<br>
         A razão pela qual a elipse foi criada no meio é porque as coordenadas x e y foram especificadas como o meio da tela (ou seja, o ponto de coordenadas x = largura da tela / 2 e y = altura da tela / 2).<br><br>
 
-        <p><strong>Função ellipse()</strong><br>
+        <p><strong>Função ellipse()</strong></p>
         A função ellipse desenha uma elipse com base nas coordenadas x e y especificadas como seu centro. Então, ao especificar as coordenadas x e y como o meio da tela, a elipse será desenhada no meio da tela.<br>
         A função ellipse() é uma das funções básicas do p5.js, que é uma biblioteca JavaScript para criar aplicativos interativos com base na linguagem Processing. A função ellipse() é usada para desenhar uma elipse (ou círculo) em um canvas.<br>
         <strong>Sintaxe ellipse(x, y, w, h)</strong><br>
