--- a/TagsCSS.html
+++ b/TagsCSS.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TagsCSS</title>
-    <link rel="stylesheet" href="TagsCSS.css">
+    <link rel="stylesheet" href="estilo01.css">
     <link rel="shortcut icon" href="favicon.ico">
     <script>
         var d = new Date();
@@ -24,33 +24,48 @@
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
+        <li><a href="Code.html" rel="next">Code</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
-        <li><a href="Dicas.html">Dicas</a></li>
-        <li><a href="Explicando.html">Explicando</a></li>
+        <li><a href="Dicas.html" rel="next">Dicas</a></li>
+        <li><a href="Entidades.html" rel="next">Entidades</a></li>
+        <li><a href="EntidadesHTML.html" rel="next">EntidadesHTML<a></li>
+        <li><a href="Explicando.html" rel="next">Explicando</a></li>
+        <li><a href="Extensoes.html" rel="next">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
-        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
-        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
-        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
-        <li><a href="Livros.html">Livros</a></li>
-        <li><a href="MySQL.html">MySQL</a></li>
+        <li><a href="Japonês.html" rel="next">Japonês</a></li>
+        <li><a href="JogoCobrinha.html" rel="next">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhax2.html" rel="next">JogoCobrinhax2</a></li>
+        <li><a href="JogoPerguntas.html" rel="next">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2.html" rel="next">JogoPerguntas2</a></li>
+        <li><a href="PerguntasRespostas.html" rel="next">PerguntasRespostas</a></li>
+        <li><a href="Livros.html" rel="next">Livros</a></li>
+        <li><a href="MySQL.html" rel="next">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
-        <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Passos.html" rel="next">Passos</a></li>
+        <li><a href="Projetos.html" rel="next">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJava.html" rel="next">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
+        <li><a href="Termos.html" rel="next">Termos</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div class="coluna">
+        <ul>
+            <li><a href="Eu.html">Quem sou eu</a></li>
+        </ul>
+
+    </div>
     
     <div id="interface">
     <h1>Tags CSS</h1>
 
-    <p><strong>Lembrando que pode ser colocado essas tags na parte < style>< /style> do documento html </strong></p><br>
+    <p><strong>Lembrando que pode ser colocado essas tags na parte < style>< /style> do documento html </strong></p>
     <p><strong>@charset "UTF-8" ;</strong><br>
     Isso é pra pegar acentuação e cabeçalho<br>
     Deve ser colado no começo do arquivo.css</p>
@@ -170,15 +185,18 @@
     text-align:justify;<br>
     text-indent: 20px;</p>
 
-    <p>05-<strong>padding: XXpx YYpx WWpx ZZpx;</strong><br>
+    <p>05-<strong>padding: XXpx YYpx WWpx ZZpx;</strong></p>
     Distância entre o conteúdo de um elemento e suas bordas<br>
     Antes as palavras grudavam na parede do site, agora não<br>
     Se todos valores forem iguais, pode por só uma vez que funciona <br>
     </p>
 
-    <p>07-<strong>position: absolute;</strong><br>
-    Absoluto = Vai ficar encima<br>
-    Exemplo : ProjetoGoogleGlass, temos a imagem do óculos encima da linha</p>
+    <p>07-<strong>position: absolute;</strong></p>
+    <p>Absoluto = Vai ficar encima</p>
+    <p>Exemplo : ProjetoGoogleGlass, temos a imagem do óculos encima da linha</p>
+
+    <p>08-<strong>postion: relative : </strong></p>
+    <p>Posicionando um elemento no fluxo normal do documento</p>
 
     --- S --- 
     <p>06-<strong>src: url('nomedoarquivo.ttf');</strong><br>
