--- a/Historico.html
+++ b/Historico.html
@@ -66,12 +66,17 @@
     <div class="coluna">
         <ul>
             <li><a href="Eu.html">Quem sou eu</a></li>
+            <li><a href="Projeto01.html">Lâmpada</a></li>
         </ul>
     </div>
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</strong><br><br>
 
+    <strong>26/03 Terça 2024 4.3</strong>
+    <p>Adicionei o meu primeiro projeto no site, fiz na aula de HMTL5 CSS3</p>
+    <p>Hoje foi o dia também de editar a página TagsJavaScript</p>
+    
     <strong>25/03 Segunda 2024 4.2</strong>
     <p>Adicionei o <strong>Quem sou eu</strong> na coluna do lado direito</p>
     <p>Alterei quase todas páginas pra essa formatação atual</p><br>
