--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <div class="coluna">
         <ul>
             <li><a href="Eu.html">Quem sou eu</a></li>
+            <li><a href="Projeto01.html">Lâmpada</a></li>
         </ul>
-
     </div>
     <div id="interface">
     <h1>Meu site &#x1F604;</h1>
