--- a/html/Historico.html
+++ b/html/Historico.html
@@ -73,6 +73,9 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</strong><br><br>
 
+    <strong07/11/2025 Sexta-Feira 5.0</strong>
+    <p>Futuramento irei voltar a atualizar</p>
+    
     <strong>26/03 Terça 2024 4.3</strong>
     <p>Adicionei o meu primeiro projeto no site, fiz na aula de HMTL5 CSS3</p>
     <p>Hoje foi o dia também de editar a página TagsJavaScript</p>
